Add progress bars, remove task completed bar

--- a/Capstone/Content/bootstrap.css
+++ b/Capstone/Content/bootstrap.css
@@ -1486,7 +1486,7 @@ th {
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: lightgrey;
 }
 
 table col[class*="col-"] {
@@ -2088,6 +2088,23 @@ fieldset[disabled] .btn-default.active {
   background-color: #ffffff;
   border-color: #cccccc;
 }
+
+.btn-primary {
+  color: #ffffff;
+  background-color: #428bca;
+  border-color: #357ebd;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #ffffff;
+  background-color: #3276b1;
+  border-color: #285e8e;
+}
+
 
 .btn-primary {
   color: #ffffff;
