--- a/Capstone/Views/Dashboard/Index.cshtml
+++ b/Capstone/Views/Dashboard/Index.cshtml
@@ -5,31 +5,36 @@
 
 
 @Styles.Render("~/Style/Dashboard.css")
-
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 
 <div id="MainPage">
     <nav id="LeftPanel">
         <div class="LeftPanelBorder" id="UserInfoContainer">
             <div id="UserInfo">
-                <label>Name of User</label><br />
-                <label>Position</label><br />
-                <label>Date</label>
+                <img id="profilePic" src="https://image.freepik.com/free-icon/male-user-profile-picture_318-37825.jpg" /><br /><br />
+                <label>Kalen Rose</label><br />
+                <label>CEO</label><br />
+                <label>2018-09-20</label>
             </div>
         </div>
 
         <div class="LeftPanelBorder" id="ProjectListContainer">
             <div id="ProjectList">
                 <label>Projects</label> <br />
-                <button class="ProjectButtons">Project 1</button><br />
-                <button class="ProjectButtons">Project 2</button>
+                <button class="ProjectButtons btn-secondary">Project 1</button><br />
+                <button class="ProjectButtons btn-secondary">Project 2</button>
             </div>
         </div>
     </nav>
-    <header>
-        <button id="signout">Sign Out</button>
 
-        <h2>Home</h2>
-        <form id="projectselection">
+
+    <header>
+        <div id="headings">
+            <h2>Personal Dashboard</h2>
+            <h3>Here's an overview of your projects</h3>
+        </div>
+
+        <form id="projectselection" class="text-center">
             <label class="radio-inline">
                 <input type="radio" name="optradio" checked>All
             </label>
@@ -45,46 +50,63 @@
 
     <div id="TasksSection">
         <label>Tasks</label>
-        <table>
-            <tr>
-                <th>Tasks</th>
-                <th>Priority</th>
-                <th>Date</th>
-                <th>Status</th>
-                <th>Project</th>
-            </tr>
-            <tr>
-                <td>Complete Capstone</td>
-                <td>Very High</td>
-                <td>September 24</td>
-                <td>Behind</td>
-                <td>College</td>
-            </tr>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Tasks</th>
+                    <th scope="col">Priority</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Project</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Complete Capstone</td>
+                    <td>Very High</td>
+                    <td>September 24</td>
+                    <td>Behind</td>
+                    <td>College</td>
+                </tr>
 
-            <tr>
-                <td>Graduate</td>
-                <td>Extremely High</td>
-                <td>December 15</td>
-                <td>On-time</td>
-                <td>College</td>
-            </tr>
-            <tr>
-                <td>Get a job that pays $1,000,000 with lots of benefits and pension</td>
-                <td>Top</td>
-                <td>January 2019</td>
-                <td>On-time</td>
-                <td>Life</td>
-            </tr>
+                <tr>
+                    <td>Graduate</td>
+                    <td>Extremely High</td>
+                    <td>December 15</td>
+                    <td>On-time</td>
+                    <td>College</td>
+                </tr>
+                <tr>
+                    <td>Get a job that pays $1,000,000 with lots of benefits and pension</td>
+                    <td>Top</td>
+                    <td>January 2019</td>
+                    <td>On-time</td>
+                    <td>Life</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 
     <div id="TaskOverviewSection">
-        <img src="https://www.patternfly.org/pattern-library/data-visualization/pie-chart/img/right-legend-pie-chart.png"/> 
-        <div id="TaskCompletionStatusContainer">
-            <label>Task Completion Status</label>
-            <div class="TaskPercentage" id="TasksCompleted">60%</div>
-            <div class="TaskPercentage" id="TasksNotCompleted">40%</div>
+        <img src="https://www.patternfly.org/pattern-library/data-visualization/pie-chart/img/right-legend-pie-chart.png" />
+    </div>
+
+    <div class="ProgressBarContainer">
+        <label>Tasks Completed</label>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
         </div>
+        <text class="text-large">4/10</text><br />
+        <text class="text-medium text-secondary">6 tasks remaining</text>
+    </div>
+
+    <div class="ProgressBarContainer">
+        <label>Tasks Completed</label>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
+        </div>
+        <text class="text-large">100/1000 GB</text><br />
+        <text class="text-medium text-secondary">900GB remaining</text>
     </div>
 
     <div id="PersonalNotesSection">
@@ -92,35 +114,28 @@
             <label>Personal Notes</label>
             <table>
                 <tr>
-                    <th>Note</th>
                     <th>Date</th>
+                    <th>Note</th>
                 </tr>
                 <tr>
-                    <td>We don't have much time left</td>
                     <td>September 17</td>
+                    <td>We don't have much time left</td>
                 </tr>
 
                 <tr>
-                    <td>Thankfully we will make 1,000,000 a year for the rest of our lives</td>
                     <td>September 18</td>
+                    <td>Thankfully we will make 1,000,000 a year for the rest of our lives</td>
                 </tr>
                 <tr>
-                    <td>...will we?</td>
                     <td>September 19</td>
+                    <td>...will we?</td>
                 </tr>
             </table>
         </div>
-        <div id="PersonalNotesButtonsContainer">
-            <button class="PersonalNotesButtons">Modify</button>
-            <button class="PersonalNotesButtons">Remove</button>
+        <div id="PersonalNotesButtonsContainer" class="btn-group">
+            <button type="button" class="btn btn-primary btn-lg">Modify</button>
+            <button type="button" class="btn btn-success btn-lg">Add</button>
+            <button type="button" class="btn btn-danger btn-lg">Delete</button>
         </div>
-    </div>
-
-    <div id="AddNoteSection">
-        <label>Notes:</label>
-        <form>
-            <textarea id="Note" name="Note" rows="4"></textarea>
-            <button id="AddPersonalNote">Add</button>
-        </form>
     </div>
 </div>
