--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -16,13 +16,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("WhiteBears", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Business", "About", "Home")</li>
+                    <li>@Html.ActionLink("Features", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Pricing", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("About Us", "Contact", "Home")</li>
+                    <li class="navFloatRight">@Html.ActionLink("Settings", "Contact", "Home")</li>
+                    <li class="navFloatRight">@Html.ActionLink("Sign Out", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
