--- a/Capstone/Views/Dashboard/Index.cshtml
+++ b/Capstone/Views/Dashboard/Index.cshtml
@@ -91,24 +91,6 @@
         <img src="https://www.patternfly.org/pattern-library/data-visualization/pie-chart/img/right-legend-pie-chart.png" />
     </div>
 
-    <div class="ProgressBarContainer">
-        <label>Tasks Completed</label>
-        <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
-        </div>
-        <text class="text-large">4/10</text><br />
-        <text class="text-medium text-secondary">6 tasks remaining</text>
-    </div>
-
-    <div class="ProgressBarContainer">
-        <label>Tasks Completed</label>
-        <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">40%</div>
-        </div>
-        <text class="text-large">100/1000 GB</text><br />
-        <text class="text-medium text-secondary">900GB remaining</text>
-    </div>
-
     <div id="PersonalNotesSection">
         <div id="PersonalNotesTable">
             <label>Personal Notes</label>
@@ -137,5 +119,22 @@
             <button type="button" class="btn btn-success btn-lg">Add</button>
             <button type="button" class="btn btn-danger btn-lg">Delete</button>
         </div>
+    </div>
+    <div class="ProgressBarContainer">
+        <label>Tasks Completed</label>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">70%</div>
+        </div>
+        <text class="text-large">7/10</text><br />
+        <text class="text-medium text-secondary">3 tasks remaining</text>
+    </div>
+
+    <div class="ProgressBarContainer">
+        <label>Storage Used</label>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">10%</div>
+        </div>
+        <text class="text-large">100/1000 GB</text><br />
+        <text class="text-medium text-secondary">900GB remaining</text>
     </div>
 </div>
