--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -25,8 +25,12 @@
                     <li>@Html.ActionLink("Features", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Pricing", "Contact", "Home")</li>
                     <li>@Html.ActionLink("About Us", "Contact", "Home")</li>
-                    <li class="navFloatRight">@Html.ActionLink("Settings", "Index", "Home")</li>
-                    <li class="navFloatRight">@Html.ActionLink("Sign Out", "Index", "Home")</li>
+                    
+                </ul>
+
+                <ul class="nav navbar-nav pull-right">
+                    <li class="pull-right">@Html.ActionLink("Sign Out", "Index", "Home")</li>
+                    <li class="pull-right">@Html.ActionLink("Settings", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
