Create add note button functionality

--- a/Capstone/Style/Dashboard.css
+++ b/Capstone/Style/Dashboard.css
@@ -105,6 +105,7 @@ header {
 #PersonalNotesButtonsContainer {
     margin-top: 20px;
     margin-left: 100px;
+    width: 300px;
     text-align: center;
 }
 
